# quantum-lotto-lab

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/: app.dart  app_controller.dart  models.dart
app/lib/src/data/: demo_repository.dart  gateway_client.dart
app/lib/src/screens/: app_shell.dart
app/test/: widget_test.dart
app/web/: index.html  manifest.json
data/tr/: cilgin_sayisal_loto_tr_10y.csv  cilgin_sayisal_loto_tr_10y_excluded.csv  on_numara_tr_10y_undated.csv  on_numara_tr_10y_undated_excluded.csv  sans_topu_tr_10y.csv  sans_topu_tr_10y_excluded.csv  super_loto_tr_10y.csv  super_loto_tr_10y_excluded.csv  turkey_lottery_manifest.json
docs/: methodology.md
docs/product/: app_quantum_implementation_plan.md  kuponiq_mobile_plan.md  mobile_ux_flow.md  turkey_lottery_sources.md
docs/superpowers/plans/: 2026-06-17-randomness-audit.md  2026-06-17-randomness-quality-upgrade.md
examples/: custom_lottery.json  sample_draws.csv
quantum_lotto_lab/: __init__.py  calibration.py  cli.py  data.py  data_quality.py  ibm.py  lotteries.py  math_model.py  models.py  quantum_profiles.py  randomness.py  tr_lotteries.py  validation.py
scripts/: fetch_tr_lottery_data.py
server/kuponiq_gateway/: __init__.py  app.py
tests/: test_calibration.py  test_core.py  test_data_quality.py  test_quantum_profiles.py  test_randomness.py  test_search.py  test_validation.py
(+3 files in other folders)
